@@ -268,6 +268,9 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                  '$use_transparent_security_image' => array( 'name' => _("Use transparent security image"),
                                           'type' => SMOPT_TYPE_BOOLEAN,
                                           'default' => true ),
+                 '$display_imap_login_error' => array( 'name' => _("Show login error message directly from IMAP server instead of generic one"),
+                                          'type' => SMOPT_TYPE_BOOLEAN,
+                                          'default' => false ),
                  /* --------------------------------------------------------*/
                  'Group5' => array( 'name' => _("Message of the Day"),
                                     'type' => SMOPT_TYPE_TITLE ),
